discussion/kv_engine/126024/126024_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: Privilege based visibility for get_scope/collection id

Update get_scope_id and get_collection_id to check that the
current user has any access to the scope or collection.

Change-Id: I4a20c791284a12d66741254da006541f923362e7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-28 09:03:24.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-28 10:00:47.000000000
Message: 
Patch Set 11: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1974/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2: error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
#error "Please include memcached/engine.h instead"
 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1974/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2:
error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1974/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27838/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23807/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/492/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2474/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3396/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3476/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3417/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11267/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-04-28 11:34:30.000000000
Message: 
Patch Set 11: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-04-28 12:40:42.000000000
Message: 
Patch Set 11: Verified+1

override clang-tidy #error issue
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-04-28 12:40:46.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
